<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".Add_faculty_page">

    <Button
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5_name"
        android:textSize="30sp"
        android:textStyle="bold"



        />
    <Button
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button6_name"
        android:textSize="30sp"
        android:textStyle="bold"



        />
    <Button
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button7_name"
        android:textSize="30sp"
        android:textStyle="bold"



        />
    <Button
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button8_name"
        android:textSize="30sp"
        android:textStyle="bold"



        />


</LinearLayout>